# distributedschedule_dms_fwk

./:  OAT.xml  OAT.xml  README.en.md  README.md  README_zh.md  bundle.json  dmsfwk.gni  hisysevent.yaml  ohos.build
etc/param/: BUILD.gn  dms.para  dms.para.dac
interfaces/innerkits/common/: BUILD.gn
interfaces/innerkits/common/include/: distributed_ability_manager_client.h  distributed_ability_manager_proxy.h  distributed_sched_client.h  distributed_sched_proxy.h
interfaces/innerkits/continuation_manager/: BUILD.gn
interfaces/innerkits/continuation_manager/include/: continuation_extra_params.h  continuation_mode.h  continuation_result.h  device_connect_status.h  device_selection_notifier_stub.h  idevice_selection_notifier.h
interfaces/innerkits/uri/: BUILD.gn
interfaces/kits/napi/continuation_manager/: BUILD.gn  continuation_manager_module.cpp  js_continuation_manager.cpp  js_continuation_manager.h  js_device_selection_listener.cpp  js_device_selection_listener.h
services/base/: BUILD.gn
services/base/include/: distributed_device_node_listener.h  dtbschedmgr_device_info_storage.h  dtbschedmgr_log.h
services/base/include/adapter/: dnetwork_adapter.h
services/base/include/deviceManager/: dms_device_info.h
services/base/include/dfx/: dms_hisysevent_report.h  dms_hitrace_chain.h  dms_hitrace_constants.h
services/base/src/: distributed_device_node_listener.cpp  dtbschedmgr_device_info_storage.cpp
services/base/src/adapter/: dnetwork_adapter.cpp
services/base/src/deviceManager/: dms_device_info.cpp
services/base/src/dfx/: dms_hisysevent_report.cpp  dms_hitrace_chain.cpp
services/dtbabilitymgr/: BUILD.gn
services/dtbabilitymgr/include/: distributed_ability_manager_interface.h  distributed_ability_manager_service.h  distributed_ability_manager_stub.h
services/dtbabilitymgr/include/continuationManager/: app_connection_stub.h  app_device_callback_stub.h  connect_status_info.h  device_selection_notifier_proxy.h  iapp_device_callback_interface.h  notifier_death_recipient.h  notifier_info.h
services/dtbabilitymgr/src/: distributed_ability_manager_client.cpp  distributed_ability_manager_proxy.cpp  distributed_ability_manager_service.cpp  distributed_ability_manager_stub.cpp  distributed_sched_client.cpp  distributed_sched_proxy.cpp
services/dtbabilitymgr/src/continuationManager/: app_connection_stub.cpp  app_device_callback_stub.cpp  connect_status_info.cpp  continuation_extra_params.cpp  continuation_result.cpp  device_selection_notifier_proxy.cpp  device_selection_notifier_stub.cpp  notifier_death_recipient.cpp  notifier_info.cpp
services/dtbabilitymgr/test/: BUILD.gn
services/dtbabilitymgr/test/unittest/continuationManager/: continuation_manager_test.cpp  continuation_manager_test.h
services/dtbschedmgr/: BUILD.gn
services/dtbschedmgr/include/: ability_connection_wrapper_proxy.h  ability_connection_wrapper_stub.h  app_connection_stub.h  caller_info.h  connect_death_recipient.h  continuation_callback_death_recipient.h  distributed_device_node_listener.h  distributed_sched_ability_shell.h  distributed_sched_adapter.h  distributed_sched_continuation.h  distributed_sched_dumper.h  distributed_sched_interface.h  distributed_sched_permission.h  distributed_sched_proxy.h  distributed_sched_service.h  distributed_sched_stub.h  dms_callback_task.h  dms_free_install_callback.h  dms_free_install_callback_interface.h  dms_free_install_callback_proxy.h  dms_free_install_callback_stub.h  dms_token_callback.h  dtbschedmgr_device_info_storage.h  dtbschedmgr_log.h  parcel_helper.h  uri.h
services/dtbschedmgr/include/adapter/: adapter_constant.h  dnetwork_adapter.h
services/dtbschedmgr/include/bundle/: bundle_manager_callback_interface.h  bundle_manager_callback_stub.h  bundle_manager_internal.h
services/dtbschedmgr/include/deviceManager/: dms_device_info.h
services/dtbschedmgr/include/mission/: distributed_data_change_listener.h  distributed_data_storage.h  distributed_mission_change_listener.h  distributed_mission_info.h  distributed_sched_mission_manager.h  kvstore_death_recipient.h  mission_changed_notify.h  mission_constant.h  mission_info.h  mission_info_converter.h  snapshot.h  snapshot_converter.h
services/dtbschedmgr/src/: ability_connection_wrapper_proxy.cpp  ability_connection_wrapper_stub.cpp  app_connection_stub.cpp  connect_death_recipient.cpp  continuation_callback_death_recipient.cpp  distributed_device_node_listener.cpp  distributed_sched_ability_shell.cpp  distributed_sched_adapter.cpp  distributed_sched_continuation.cpp  distributed_sched_dumper.cpp  distributed_sched_permission.cpp  distributed_sched_proxy.cpp  distributed_sched_service.cpp  distributed_sched_stub.cpp  dms_callback_task.cpp  dms_free_install_callback.cpp  dms_free_install_callback_proxy.cpp  dms_free_install_callback_stub.cpp  dms_token_callback.cpp  dtbschedmgr_device_info_storage.cpp
services/dtbschedmgr/src/adapter/: dnetwork_adapter.cpp
services/dtbschedmgr/src/bundle/: bundle_manager_callback_stub.cpp  bundle_manager_internal.cpp
services/dtbschedmgr/src/deviceManager/: dms_device_info.cpp
services/dtbschedmgr/src/mission/: distributed_data_change_listener.cpp  distributed_data_storage.cpp  distributed_mission_change_listener.cpp  distributed_mission_info.cpp  distributed_sched_mission_manager.cpp  kvstore_death_recipient.cpp  mission_changed_notify.cpp  mission_info.cpp  mission_info_converter.cpp  snapshot.cpp  snapshot_converter.cpp
services/dtbschedmgr/test/: BUILD.gn
services/dtbschedmgr/test/etsDmsDemo/dmsDemo/entry/: build.gradle
services/dtbschedmgr/test/unittest/: bundle_manager_internal_test.cpp  bundle_manager_internal_test.h  distributed_sched_ability_shell_test.cpp  distributed_sched_call_test.cpp  distributed_sched_connect_test.cpp  distributed_sched_continuation_test.cpp  distributed_sched_continuation_test.h  distributed_sched_permission_test.cpp  distributed_sched_permission_test.h  distributed_sched_service_test.cpp  dms_hisysevent_report_test.cpp  dms_hisysevent_report_test.h  mock_distributed_sched.cpp  mock_distributed_sched.h
(+59 files in other folders)
