# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/startup/init_lite/services/etc/param/param_fixer.gni")
import("//build/ohos.gni")

#################################################################################

group("param_files") {
  deps = [
    ":dms.para",
    ":dms.para.dac",
  ]
}

ohos_prebuilt_para("dms.para") {
  source = "dms.para"
  module_install_dir = "etc/param"
  subsystem_name = "ability"
  part_name = "dmsfwk"
}

ohos_prebuilt_para("dms.para.dac") {
  source = "dms.para.dac"
  module_install_dir = "etc/param"
  subsystem_name = "ability"
  part_name = "dmsfwk"
}
