# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")

config("distributed_sched_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include/",
    "//foundation/ability/dmsfwk/interfaces/innerkits/continuation_manager/include/",
  ]
}

ohos_shared_library("dmsbaseinner") {
  install_enable = true
  sources = [
    "src/adapter/dnetwork_adapter.cpp",
    "src/deviceManager/dms_device_info.cpp",
    "src/dfx/dms_hisysevent_report.cpp",
    "src/dfx/dms_hitrace_chain.cpp",
    "src/distributed_device_node_listener.cpp",
    "src/dtbschedmgr_device_info_storage.cpp",
  ]

  configs = [ ":distributed_sched_config" ]
  public_configs = [ ":distributed_sched_config" ]

  external_deps = [
    "device_auth:deviceauth_sdk",
    "dsoftbus:softbus_client",
    "eventhandler:libeventhandler",
    "hisysevent_native:libhisysevent",
    "hitrace_native:hitrace_meter",
    "hitrace_native:libhitrace",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
    "utils_base:utils",
  ]
  part_name = "dmsfwk"
  subsystem_name = "ability"
}
