# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")

group("unittest") {
  testonly = true
  deps = [ "test:unittest" ]
}

config("distributed_ability_manager_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include/",
    "../base/include/",
    "//foundation/distributedschedule/dmsfwk/interfaces/innerkits/common/include/",
    "//foundation/distributedschedule/dmsfwk/interfaces/innerkits/continuation_manager/include/",
  ]
}

ohos_shared_library("distributed_ability_manager_svr") {
  install_enable = true
  sources = [
    "src/continuationManager/app_device_callback_stub.cpp",
    "src/continuationManager/connect_status_info.cpp",
    "src/continuationManager/continuation_extra_params.cpp",
    "src/continuationManager/continuation_result.cpp",
    "src/continuationManager/device_selection_notifier_proxy.cpp",
    "src/continuationManager/device_selection_notifier_stub.cpp",
    "src/continuationManager/notifier_death_recipient.cpp",
    "src/continuationManager/notifier_info.cpp",
    "src/distributed_ability_manager_service.cpp",
    "src/distributed_ability_manager_stub.cpp",
  ]

  configs = [ ":distributed_ability_manager_config" ]

  ldflags = [ "-rdynamic" ]

  external_deps = [
    "dsoftbus:softbus_client",
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
    "startup_l2:syspara",
    "utils_base:utils",
  ]

  deps =
      [ "//foundation/distributedschedule/dmsfwk/services/base:dmsbaseinner" ]

  part_name = "dmsfwk_standard"
  subsystem_name = "distributedschedule"
}
