# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")

group("unittest") {
  testonly = true
  deps = [ "test:unittest" ]
}

config("distributed_sched_config") {
  visibility = [ ":*" ]
  include_dirs = [ "include" ]
}

ohos_shared_library("distributedschedsvr") {
  install_enable = true
  sources = [
    "src/ability_connection_wrapper_proxy.cpp",
    "src/ability_connection_wrapper_stub.cpp",
    "src/adapter/dnetwork_adapter.cpp",
    "src/bundle/bundle_manager_internal.cpp",
    "src/connect_death_recipient.cpp",
    "src/deviceManager/dms_device_info.cpp",
    "src/distributed_device_node_listener.cpp",
    "src/distributed_sched_adapter.cpp",
    "src/distributed_sched_continuation.cpp",
    "src/distributed_sched_dumper.cpp",
    "src/distributed_sched_permission.cpp",
    "src/distributed_sched_proxy.cpp",
    "src/distributed_sched_service.cpp",
    "src/distributed_sched_stub.cpp",
    "src/dtbschedmgr_device_info_storage.cpp",
    "src/mission/distributed_data_change_listener.cpp",
    "src/mission/distributed_data_storage.cpp",
    "src/mission/distributed_mission_change_listener.cpp",
    "src/mission/distributed_mission_info.cpp",
    "src/mission/distributed_sched_mission_manager.cpp",
    "src/mission/kvstore_death_recipient.cpp",
    "src/mission/mission_changed_notify.cpp",
    "src/mission/mission_info_converter.cpp",
    "src/mission/snapshot.cpp",
    "src/mission/snapshot_converter.cpp",
  ]

  configs = [ ":distributed_sched_config" ]

  deps = [ "//foundation/appexecfwk/standard/common:libappexecfwk_common" ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_manager",
    "access_token:libaccesstoken_sdk",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "distributeddatamgr:distributeddata_inner",
    "dsoftbus_standard:softbus_client",
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "multimedia_image_standard:image_native",
    "os_account_standard:os_account_innerkits",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
    "utils_base:utils",
  ]

  part_name = "dmsfwk_standard"
  subsystem_name = "distributedschedule"
}
