# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("continuation_manager_public_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include/",
    "//foundation/ability/dmsfwk/services/base/include",
  ]

  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
}

ohos_shared_library("continuation_manager") {
  sources = [
    "//foundation/ability/dmsfwk/services/dtbabilitymgr/src/continuationManager/continuation_extra_params.cpp",
    "//foundation/ability/dmsfwk/services/dtbabilitymgr/src/continuationManager/continuation_result.cpp",
    "//foundation/ability/dmsfwk/services/dtbabilitymgr/src/continuationManager/device_selection_notifier_stub.cpp",
  ]

  public_configs = [ ":continuation_manager_public_config" ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "utils_base:utils",
  ]

  subsystem_name = "ability"
  part_name = "dmsfwk"
}
