# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")

config("zuri_config") {
  include_dirs = [
    "//utils/native/base/include",
    "//foundation/distributedschedule/dmsfwk/services/dtbschedmgr/include",
  ]
}

ohos_shared_library("zuri") {
  sources =
      [ "//foundation/distributedschedule/dmsfwk/utils/native/source/uri.cpp" ]
  configs = [ ":zuri_config" ]

  public_configs = [ ":zuri_config" ]

  if (is_standard_system) {
    external_deps = [
      "hiviewdfx_hilog_native:libhilog",
      "ipc:ipc_core",
    ]
    part_name = "dmsfwk_L2"
  }
  deps = [ "//utils/native/base:utils" ]
  subsystem_name = "distributedschedule"
}
